<resources>
    <string name="app_name">Sulcheduler</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_required_info">필수정보 입력</string>
    <string name="register_description">내 또래의 평균 주량 측정을 위해 필요한 정보입니다.</string>
    <string name="nickname">닉네임</string>
    <string name="check_duplication">중복체크</string>
    <string name="input_nickname">닉네임 입력</string>
    <string name="gender">성별</string>
    <string name="female">여성</string>
    <string name="male">남성</string>
    <string name="ok">확인</string>
    <string name="birth_year">생년</string>
    <string name="hint_of_birth_year">1992년</string>
    <string name="error_nickname_duplication">사용 중인 닉네임입니다.</string>
    <string name="success_nickname_duplication_check">사용 가능한 닉네임입니다.</string>
    <string name="year">년</string>


    <!--  Home  -->
    <string name="home_title">예정된 술케줄을\n확인해보세요.</string>
    <string name="home_sunday">일</string>
    <string name="home_monday">월</string>
    <string name="home_tuesday">화</string>
    <string name="home_wednesday">수</string>
    <string name="home_thursday">목</string>
    <string name="home_friday">금</string>
    <string name="home_saturday">토</string>
    <string name="month_title">%d년 %d월</string>
</resources>