<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:parentTag="android.widget.LinearLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dayTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="25dp"
        android:paddingVertical="14dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sun"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home_sunday"
            app:layout_constraintEnd_toStartOf="@id/mon"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/mon"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home_monday"
            app:layout_constraintEnd_toStartOf="@id/tue"
            app:layout_constraintStart_toEndOf="@id/sun" />

        <TextView
            android:id="@+id/tue"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home_tuesday"
            app:layout_constraintEnd_toStartOf="@id/wed"
            app:layout_constraintStart_toEndOf="@id/mon" />

        <TextView
            android:id="@+id/wed"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home_wednesday"
            app:layout_constraintEnd_toStartOf="@id/thu"
            app:layout_constraintStart_toEndOf="@id/tue" />

        <TextView
            android:id="@+id/thu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home_thursday"
            app:layout_constraintEnd_toStartOf="@id/fri"
            app:layout_constraintStart_toEndOf="@id/wed" />

        <TextView
            android:id="@+id/fri"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home_friday"
            app:layout_constraintEnd_toStartOf="@id/sat"
            app:layout_constraintStart_toEndOf="@id/thu" />

        <TextView
            android:id="@+id/sat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/home_saturday"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/fri" />

    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <View-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="0.5dp"-->
<!--        android:alpha="0.1"-->
<!--        android:background="@color/grey700" />-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/layout_month_item" />


</merge>