<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerViewModel"
            type="com.example.android_mvvm_template.register.RegisterViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp"
        tools:context=".SecondFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_line_of_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/input_required_info"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/register_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/register_description"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/register_title"
            app:layout_constraintTop_toBottomOf="@id/register_title" />

        <include
            android:id="@+id/nickname_input_field"
            layout="@layout/custom_layout_input_text_with_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            app:layout_constraintTop_toBottomOf="@id/register_description" />

        <include
            android:id="@+id/birthday_input_field"
            layout="@layout/custom_layout_input_text_with_action_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/nickname_input_field" />

        <TextView
            android:id="@+id/gender_picker_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/gender"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birthday_input_field" />


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/female_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/active_blue"
            android:text="@string/female"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_picker_title"
            tools:checked="true" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/male_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/active_blue"
            android:text="@string/male"
            app:layout_constraintStart_toStartOf="@id/middle_line_of_vertical"
            app:layout_constraintTop_toBottomOf="@id/gender_picker_title" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginBottom="29dp"
            android:backgroundTint="@color/active_blue"
            android:text="@string/ok"
            app:cornerRadius="12dp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>