<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android_mvvm_template.register.RegisterViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/nickname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/input_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:background="@{null}"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/input_nickname"
            android:maxLength="12"
            app:layout_constraintEnd_toStartOf="@+id/action_name"
            app:layout_constraintStart_toStartOf="@id/title_nickname"
            app:layout_constraintTop_toBottomOf="@id/title_nickname" />

        <TextView
            android:id="@+id/action_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:padding="8dp"
            android:paddingEnd="0dp"
            android:text="@string/check_duplication"
            app:layout_constraintBottom_toBottomOf="@id/input_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/input_field" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="1.5dp"
            android:background="@color/un_focused"
            app:layout_constraintTop_toBottomOf="@id/input_field" />

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@id/length_counter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line"
            tools:text="사용 중인 닉네임입니다." />


        <TextView
            android:id="@+id/length_counter"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/description"
            app:layout_constraintEnd_toEndOf="@id/line"
            app:layout_constraintTop_toTopOf="@id/description"
            tools:text="0/12" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>